Horiz scrollbar fix.

--- a/app/css/tickets.sass
+++ b/app/css/tickets.sass
@@ -12,6 +12,9 @@
   background-image: url(../images/bg-doodle.jpg)
   background-size: 500px auto
 
+  // Prevent ornaments from making horiz scrollbars
+  overflow: hidden
+
   .heading h2
     color: $lime * 0.8
     +respond(font-size, auto, 1.3em, 1.5em)
